--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "subscribable",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "compile": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
