--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "subscribable",
+  "name": "subscribable-decorator",
   "version": "1.0.0",
-  "description": "",
+  "description": "Provides typescript decorators for classes that make methods/properties subscribable.",
   "main": "dist/index.js",
   "scripts": {
     "compile": "tsc",
